// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RiskBadge > snapshots > renders critical level with animation 1`] = `
<span
  aria-label="Risk level: Critical"
  class="inline-flex items-center gap-1 rounded-full font-medium text-sm px-2.5 py-1 bg-risk-critical/10 text-risk-critical motion-safe:animate-pulse-critical"
  data-testid="risk-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-octagon-alert w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 16h.01"
    />
    <path
      d="M12 8v4"
    />
    <path
      d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
    />
  </svg>
  Critical
</span>
`;

exports[`RiskBadge > snapshots > renders critical level without animation 1`] = `
<span
  aria-label="Risk level: Critical"
  class="inline-flex items-center gap-1 rounded-full font-medium text-sm px-2.5 py-1 bg-risk-critical/10 text-risk-critical"
  data-testid="risk-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-octagon-alert w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 16h.01"
    />
    <path
      d="M12 8v4"
    />
    <path
      d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
    />
  </svg>
  Critical
</span>
`;

exports[`RiskBadge > snapshots > renders critical risk level correctly 1`] = `
<span
  aria-label="Risk level: Critical"
  class="inline-flex items-center gap-1 rounded-full font-medium text-sm px-2.5 py-1 bg-risk-critical/10 text-risk-critical motion-safe:animate-pulse-critical"
  data-testid="risk-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-octagon-alert w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 16h.01"
    />
    <path
      d="M12 8v4"
    />
    <path
      d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
    />
  </svg>
  Critical
</span>
`;

exports[`RiskBadge > snapshots > renders high risk level correctly 1`] = `
<span
  aria-label="Risk level: High"
  class="inline-flex items-center gap-1 rounded-full font-medium text-sm px-2.5 py-1 bg-risk-high/10 text-risk-high"
  data-testid="risk-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  High
</span>
`;

exports[`RiskBadge > snapshots > renders lg size variant correctly 1`] = `
<span
  aria-label="Risk level: Medium"
  class="inline-flex items-center gap-1 rounded-full font-medium text-base px-3 py-1.5 bg-risk-medium/10 text-risk-medium"
  data-testid="risk-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  Medium
</span>
`;

exports[`RiskBadge > snapshots > renders low risk level correctly 1`] = `
<span
  aria-label="Risk level: Low"
  class="inline-flex items-center gap-1 rounded-full font-medium text-sm px-2.5 py-1 bg-risk-low/10 text-risk-low"
  data-testid="risk-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-check-big w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21.801 10A10 10 0 1 1 17 3.335"
    />
    <path
      d="m9 11 3 3L22 4"
    />
  </svg>
  Low
</span>
`;

exports[`RiskBadge > snapshots > renders md size variant correctly 1`] = `
<span
  aria-label="Risk level: Medium"
  class="inline-flex items-center gap-1 rounded-full font-medium text-sm px-2.5 py-1 bg-risk-medium/10 text-risk-medium"
  data-testid="risk-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  Medium
</span>
`;

exports[`RiskBadge > snapshots > renders medium risk level correctly 1`] = `
<span
  aria-label="Risk level: Medium"
  class="inline-flex items-center gap-1 rounded-full font-medium text-sm px-2.5 py-1 bg-risk-medium/10 text-risk-medium"
  data-testid="risk-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  Medium
</span>
`;

exports[`RiskBadge > snapshots > renders sm size variant correctly 1`] = `
<span
  aria-label="Risk level: Medium"
  class="inline-flex items-center gap-1 rounded-full font-medium text-xs px-2 py-0.5 bg-risk-medium/10 text-risk-medium"
  data-testid="risk-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  Medium
</span>
`;

exports[`RiskBadge > snapshots > renders with custom className 1`] = `
<span
  aria-label="Risk level: Low"
  class="inline-flex items-center gap-1 rounded-full font-medium text-sm px-2.5 py-1 bg-risk-low/10 text-risk-low custom-margin ml-4"
  data-testid="risk-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-check-big w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21.801 10A10 10 0 1 1 17 3.335"
    />
    <path
      d="m9 11 3 3L22 4"
    />
  </svg>
  Low
</span>
`;

exports[`RiskBadge > snapshots > renders with score displayed 1`] = `
<span
  aria-label="Risk level: High, score 85"
  class="inline-flex items-center gap-1 rounded-full font-medium text-sm px-2.5 py-1 bg-risk-high/10 text-risk-high"
  data-testid="risk-badge"
  role="status"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  High (85)
</span>
`;
